--- a/index.html
+++ b/index.html
@@ -78,9 +78,17 @@
   <div class="container text-center">
     <h2 class="fw-bold mb-5">Gallery</h2>
     <div class="row g-3">
-      <div class="col-md-4"><img src="hi.jpg" class="img-fluid rounded gallery-img"></div>
-      <div class="col-md-4"><img src="3.jpg" class="img-fluid rounded gallery-img"></div>
-      <div class="col-md-4"><img src="2.jpg" class="img-fluid rounded gallery-img"></div>
+      <!-- On small screens: 2 per row, on medium: 3 per row -->
+      <div class="col-6 col-md-4">
+        <img src="hi.jpg" class="img-fluid rounded gallery-img">
+      </div>
+      <div class="col-6 col-md-4">
+        <img src="3.jpg" class="img-fluid rounded gallery-img">
+      </div>
+      <div class="col-6 col-md-4">
+        <img src="2.jpg" class="img-fluid rounded gallery-img">
+      </div>
+      
     </div>
   </div>
 </section>
